[gd_scene load_steps=2 format=2]

[ext_resource path="res://Settings.gd" type="Script" id=1]

[node name="Settings" type="PopupPanel"]
rect_min_size = Vector2( 600, 400 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 4

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
margin_right = 592.0
margin_bottom = 356.0

[node name="Audio" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxAmbient" type="HBoxContainer" parent="VBoxContainer/TabContainer/Audio"]
margin_right = 584.0
margin_bottom = 50.0
rect_min_size = Vector2( 500, 50 )
alignment = 1

[node name="LabelAmbient" type="Label" parent="VBoxContainer/TabContainer/Audio/HBoxAmbient"]
margin_left = 40.0
margin_top = 18.0
margin_right = 240.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 0 )
text = "Ambient Volume"
align = 1

[node name="HSliderAmbient" type="HSlider" parent="VBoxContainer/TabContainer/Audio/HBoxAmbient"]
margin_left = 244.0
margin_right = 544.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
min_value = -80.0
max_value = 20.0

[node name="HBoxEffects" type="HBoxContainer" parent="VBoxContainer/TabContainer/Audio"]
margin_top = 54.0
margin_right = 584.0
margin_bottom = 104.0
rect_min_size = Vector2( 500, 50 )
alignment = 1

[node name="LabelEffects" type="Label" parent="VBoxContainer/TabContainer/Audio/HBoxEffects"]
margin_left = 40.0
margin_top = 18.0
margin_right = 240.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 0 )
text = "Effects  Volume"
align = 1

[node name="HSliderEffects" type="HSlider" parent="VBoxContainer/TabContainer/Audio/HBoxEffects"]
margin_left = 244.0
margin_right = 544.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
min_value = -80.0
max_value = 20.0

[node name="HBoxMain" type="HBoxContainer" parent="VBoxContainer/TabContainer/Audio"]
margin_top = 108.0
margin_right = 584.0
margin_bottom = 158.0
rect_min_size = Vector2( 500, 50 )
alignment = 1

[node name="LabelMain" type="Label" parent="VBoxContainer/TabContainer/Audio/HBoxMain"]
margin_left = 40.0
margin_top = 18.0
margin_right = 240.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 0 )
text = "Main Volume"
align = 1

[node name="HSliderMain" type="HSlider" parent="VBoxContainer/TabContainer/Audio/HBoxMain"]
margin_left = 244.0
margin_right = 544.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
min_value = -80.0
max_value = 20.0

[node name="HBoxMusic" type="HBoxContainer" parent="VBoxContainer/TabContainer/Audio"]
margin_top = 162.0
margin_right = 584.0
margin_bottom = 212.0
rect_min_size = Vector2( 500, 50 )
alignment = 1

[node name="LabelMusic" type="Label" parent="VBoxContainer/TabContainer/Audio/HBoxMusic"]
margin_left = 40.0
margin_top = 18.0
margin_right = 240.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 0 )
text = "Music  Volume"
align = 1

[node name="HSliderMusic" type="HSlider" parent="VBoxContainer/TabContainer/Audio/HBoxMusic"]
margin_left = 244.0
margin_right = 544.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
min_value = -80.0
max_value = 20.0

[node name="HBoxSpeech" type="HBoxContainer" parent="VBoxContainer/TabContainer/Audio"]
margin_top = 216.0
margin_right = 584.0
margin_bottom = 266.0
rect_min_size = Vector2( 500, 50 )
alignment = 1

[node name="LabelSpeech" type="Label" parent="VBoxContainer/TabContainer/Audio/HBoxSpeech"]
margin_left = 40.0
margin_top = 18.0
margin_right = 240.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 0 )
text = "Speech  Volume"
align = 1

[node name="HSliderSpeech" type="HSlider" parent="VBoxContainer/TabContainer/Audio/HBoxSpeech"]
margin_left = 244.0
margin_right = 544.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
min_value = -80.0
max_value = 20.0

[node name="HBoxWeather" type="HBoxContainer" parent="VBoxContainer/TabContainer/Audio"]
margin_top = 270.0
margin_right = 584.0
margin_bottom = 320.0
rect_min_size = Vector2( 500, 50 )
alignment = 1

[node name="LabelWeather" type="Label" parent="VBoxContainer/TabContainer/Audio/HBoxWeather"]
margin_left = 40.0
margin_top = 18.0
margin_right = 240.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 0 )
text = "Weather  Volume"
align = 1

[node name="HSliderWeather" type="HSlider" parent="VBoxContainer/TabContainer/Audio/HBoxWeather"]
margin_left = 244.0
margin_right = 544.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
min_value = -80.0
max_value = 20.0

[node name="Interface" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxFont" type="HBoxContainer" parent="VBoxContainer/TabContainer/Interface"]
margin_right = 584.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
alignment = 1

[node name="lblFont" type="Label" parent="VBoxContainer/TabContainer/Interface/HBoxFont"]
margin_left = 77.0
margin_top = 5.0
margin_right = 177.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 20 )
text = "Font"
align = 1
valign = 1

[node name="MenuFont" type="MenuButton" parent="VBoxContainer/TabContainer/Interface/HBoxFont"]
margin_left = 181.0
margin_right = 325.0
margin_bottom = 30.0
text = "Select Interface Font"
expand_icon = true

[node name="lblFont2" type="Label" parent="VBoxContainer/TabContainer/Interface/HBoxFont"]
margin_left = 329.0
margin_top = 5.0
margin_right = 429.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 20 )
text = "Size"
align = 1
valign = 1

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/TabContainer/Interface/HBoxFont"]
margin_left = 433.0
margin_right = 507.0
margin_bottom = 30.0
min_value = 10.0
max_value = 24.0
value = 16.0

[node name="HBoxResolution" type="HBoxContainer" parent="VBoxContainer/TabContainer/Interface"]
margin_top = 34.0
margin_right = 584.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 10
alignment = 1

[node name="lblResolution" type="Label" parent="VBoxContainer/TabContainer/Interface/HBoxResolution"]
margin_left = 165.0
margin_top = 5.0
margin_right = 265.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 20 )
text = "Font"
align = 1
valign = 1

[node name="MenuResolution" type="MenuButton" parent="VBoxContainer/TabContainer/Interface/HBoxResolution"]
margin_left = 275.0
margin_right = 419.0
margin_bottom = 30.0
focus_mode = 2
text = "Select Interface Font"
expand_icon = true

[node name="HBoxControls" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 360.0
margin_right = 592.0
margin_bottom = 410.0
rect_min_size = Vector2( 500, 50 )
custom_constants/separation = 50
alignment = 1

[node name="btnDefaults" type="Button" parent="VBoxContainer/HBoxControls"]
margin_left = 171.0
margin_right = 271.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "Defaults"

[node name="btnSave" type="Button" parent="VBoxContainer/HBoxControls"]
margin_left = 321.0
margin_right = 421.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "Save"

[connection signal="value_changed" from="VBoxContainer/TabContainer/Audio/HBoxAmbient/HSliderAmbient" to="." method="_on_HSliderAmbient_value_changed"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Audio/HBoxEffects/HSliderEffects" to="." method="_on_HSliderEffects_value_changed"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Audio/HBoxMain/HSliderMain" to="." method="_on_HSliderMain_value_changed"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Audio/HBoxMusic/HSliderMusic" to="." method="_on_HSliderMusic_value_changed"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Audio/HBoxSpeech/HSliderSpeech" to="." method="_on_HSliderSpeech_value_changed"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Audio/HBoxWeather/HSliderWeather" to="." method="_on_HSliderWeather_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxControls/btnDefaults" to="." method="_on_btnDefaults_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxControls/btnSave" to="." method="_on_btnSave_pressed"]
